lab-aws-eks/manifests/ingress-example/myingressapp.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myingressapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myingressapp
  namespace: myingressapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myingressapp
  template:
    metadata:
      labels:
        app: myingressapp
    spec:
      containers:
        - name: myingressapp
          image: aputra/myapp-195:v2
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/service/annotations/
apiVersion: v1
kind: Service
metadata:
  name: myingressapp
  namespace: myingressapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myingressapp
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingressapp
  namespace: myingressapp
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    # ExternalDNS will create CNAME proxied through Cloudflare (set to "false" if you want DNS-only)
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: alb
  rules:
    - host: app.ericmolinam.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myingressapp
                port:
                  number: 8080
